--- a/package.json
+++ b/package.json
@@ -63,9 +63,11 @@
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.2",
     "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-links": "^6.3.2",
     "@storybook/node-logger": "^6.3.2",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.3.2"
+    "@storybook/react": "^6.3.2",
+    "react-docgen": "^5.4.0"
   }
 }
