--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "@storybook/addon-links": "^6.3.2",
     "@storybook/node-logger": "^6.3.2",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.3.2",
-    "react-docgen": "^5.4.0"
+    "@storybook/react": "^6.3.2"
   }
 }
