--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-transition-group": "^4.4.1",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
