--- a/package.json
+++ b/package.json
@@ -1,37 +1,64 @@
 {
   "name": "robutadesign",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.7",
+  "description": "React-TypeScript-Component",
+  "private": false,
+  "author": {
+    "email": "1403693160@qq.com",
+    "name": "Daiwang"
+  },
+  "license": "MIT",
+  "keywords": [
+    "react",
+    "TypeScript",
+    "component"
+  ],
+  "homepage": "https://github.com/DaiWang-Lei/robutaDesign",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DaiWang-Lei/robutaDesign"
+  },
+  "files": [
+    "dist"
+  ],
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.js",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/classnames": "^2.3.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-transition-group": "^4.4.1",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
-    "node-sass": "^6.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
+  },
+  "peerDependencies": {
+    "react": ">=16.8",
+    "react-dom": ">=16.8"
+  },
+  "resolutions": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "clear": "rimraf ./dist",
+    "lint": "eslint --ext js,ts,tsx src --max-warnings 10",
+    "test:nowatch": "cross-env CI=true react-scripts test",
+    "build": "npm run clear && npm run  build-ts && npm run build-css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "build-ts": "tsc -p tsconfig.build.json",
+    "build-css": "node-sass ./src/styles/index.scss ./dist/index.css",
+    "prepublish": "npm run test:nowatch && npm run lint && npm run build"
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit":"npm run test:nowatch && npm run lint"
+    }
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +95,23 @@
     "@storybook/addon-links": "^6.3.2",
     "@storybook/node-logger": "^6.3.2",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.3.2"
+    "@storybook/react": "^6.3.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.3.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-transition-group": "^4.4.1",
+    "cross-env": "^7.0.3",
+    "husky": "^7.0.1",
+    "node-sass": "^6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.2"
   }
 }
