--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,12 @@ cache:
     - node_modules
   env:
     - CI=true
+    script:
+      - npm run build-storybook
+    deploy:
+      provider: pages
+      skip_cleanup: true
+      github_token: $GITHUB_TOKEN
+      local_dir: storybook_static
+      on:
+        branch: storybook
